Simplify interface - two separate search boxes for movies and cast

--- a/index.html
+++ b/index.html
@@ -42,20 +42,8 @@
             <!-- Search Section -->
             <section class="search-section">
                 <div class="search-container">
-                    <!-- Search Type Tabs -->
-                    <div class="search-tabs">
-                        <button class="search-tab active" data-type="movie">
-                            <i class="fas fa-film"></i>
-                            Search Movies
-                        </button>
-                        <button class="search-tab" data-type="cast">
-                            <i class="fas fa-users"></i>
-                            Find Movies by Cast
-                        </button>
-                    </div>
-                    
                     <!-- Movie Search -->
-                    <div class="search-box" id="movie-search-box">
+                    <div class="search-box">
                         <input 
                             type="text" 
                             id="movie-search" 
@@ -70,11 +58,11 @@
                     </div>
                     
                     <!-- Cast Search -->
-                    <div class="search-box" id="cast-search-box" style="display: none;">
+                    <div class="search-box">
                         <input 
                             type="text" 
                             id="cast-search" 
-                            placeholder="Enter actor/actress name (e.g., Brad Pitt)..." 
+                            placeholder="Enter cast name (e.g., Brad Pitt)..." 
                             class="search-input"
                             autocomplete="off"
                         >
