--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             class="search-input"
                             autocomplete="off"
                         >
-                        <button id="cast-search-btn" class="search-btn" onclick="alert('HTML onclick works!')">
+                        <button id="cast-search-btn" class="search-btn" onclick="window.movieSearchApp.searchCast()">
                             <i class="fas fa-search"></i>
                             Find Movies by Cast
                         </button>
