--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             class="search-input"
                             autocomplete="off"
                         >
-                        <button id="cast-search-btn" class="search-btn" onclick="window.movieSearchApp.searchCast()">
+                        <button id="cast-search-btn" class="search-btn" onclick="console.log('Button clicked!'); if(window.movieSearchApp) { window.movieSearchApp.searchCast(); } else { alert('App not found!'); }">
                             <i class="fas fa-search"></i>
                             Find Movies by Cast
                         </button>
