--- a/index.html
+++ b/index.html
@@ -173,6 +173,26 @@
     </footer>
 
     <!-- Scripts -->
+    <script>
+        // Define handleCastSearch function immediately
+        function handleCastSearch() {
+            console.log('handleCastSearch called from HTML');
+            if (window.movieSearchApp) {
+                console.log('App found, calling searchCast');
+                window.movieSearchApp.searchCast();
+            } else {
+                console.log('App not found, waiting...');
+                setTimeout(() => {
+                    if (window.movieSearchApp) {
+                        console.log('App found after wait, calling searchCast');
+                        window.movieSearchApp.searchCast();
+                    } else {
+                        alert('App still not found. Please refresh the page.');
+                    }
+                }, 100);
+            }
+        }
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
