Complete cleanup: Remove all cast-related code from JavaScript, CSS, HTML, and README

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Search Tool - Find Your Favorite Movies</title>
-    <meta name="description" content="Search for movies and get detailed information including plot, cast, ratings, and more using The Movie Database API.">
+    <meta name="description" content="Search for movies and get detailed information including plot, ratings, and more using The Movie Database API.">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -35,7 +35,7 @@
             <section class="hero">
                 <div class="hero-content">
                     <h2 class="hero-title">Discover Amazing Movies</h2>
-                    <p class="hero-subtitle">Search for any movie and get detailed information including plot, cast, ratings, and more!</p>
+                    <p class="hero-subtitle">Search for any movie and get detailed information including plot, ratings, and more!</p>
                 </div>
             </section>
 
